hamt_go/CHANGES

v0.7.0
    2014-05-06
        * replace *Entry with NodeI in other tables
        * unique test keys                                          * SLOC 1468
v0.6.0
    2014-05-06
        * replace *Entry with NodeI in root table                   * SLOC 1449
v0.5.0
    2014-05-05
        * unsuccessful find returns nil value, nil error            * SLOC 1464
v0.4.0
    2014-04-22
        * introduced root with 2^t entries and no use of POPCOUNT   * SLOC 1183
    2014-04-23
        * perf tests debugged                                       * SLOC 1248
    2014-04-25
        * added HAMT entry splitting test                           * SLOC 1351
        * dupe key handling plus tests; plus cleanup                * SLOC 1419
    2014-04-30
        * leaf count tests improved, errors corrected               * SLOC 1451
v0.3.0
    2014-04-21
        * debugged HAMT that actually uses SWAR code                * SLOC 2793
            - much legacy code still present
    2014-04-22
        * dropped HAMT32, HAMT64, and related code                  * SLOC 1046
        * correct handling of t at non-root levels                  * SLOC 1049
v0.2.0
    2014-04-17
        * tested, working HAMT64 code                               * SLOC 1717
    2014-04-20
        * HAMT32 and HAMT64 replaced by HAMT parameterized by w     * SLOC 2827
            and t; legacy code remains, the t parameter is present
            but ignored
v0.1.1
    2014-04-07
        * first level ndx inserts pass test                         * SLOC  549
    2014-04-08
        * test verifies first level values correct                  * SLOC  571
    2014-04-12
        * tested, working Table32.{insert,find,delete}Entry()       * SLOC  730
    2014-04-16
        * recursive Table32 tests succeed                           * SLOC  967
        * tested, working HAMT32.{Insert,Find,Delete}               * SLOC 1007

v0.1.0
    2014-04-04