@@ -10,8 +10,7 @@ package hamt_go
 import (
 	"bytes"
 	"fmt"
-	xr "github.com/jddixon/xlattice_go/rnglib"
-	//. "launchpad.net/gocheck"
+	xr "github.com/jddixon/rnglib_go/"
 	. "gopkg.in/check.v1"
 	"time"
 )
